--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,22 @@
 </head>
 <body>
 	
+	<header class="header indigo z-depth-1" style="text-align: center;">
+		<h2 style="margin: 0px; padding: 30px; color: #eceff1;">sjsoidjsid</h2>
+		<nav class="indigo">
+			<div class="nav-wrapper row">
+				<div class="col s4 offset-s4">
+					<ul>
+						<li><a href="/">Início</a></li>
+						<li><a href="/series">Séries</a></li>
+						<li><a href="/my">Minhas séries</a></li>
+						<li><a href="/me">Perfil</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	
 	<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
 
 <%= yield %>
