Serie and Episode models defined and layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
 	
 	<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
 
-<%= yield %>
+	<div class="container">
+		<%= yield %>
+	</div>
 
 </body>
 </html>
