--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,9 @@
 					<div class="card-content">
 						<span class="card-title activator grey-text text-darken-4"><%= serie.title %></span>
 					</div>
+					<div class="card-action">
+						<%= link_to 'Episódios', serie %>
+					</div>
 				</div>
 			</div>
 		<% end %>
