--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -1,15 +1,15 @@
 <div class="row">
 	<div class="col s5">
-		<div class="card medium">
+		<div class="card">
 			<div class="card-image">
 				<img src="<%= @serie.poster %>">
 				<span class="card-title"></span>
 			</div>
 			<div class="card-content">
 				<span class="card-title activator grey-text text-darken-4"><%= @serie.original_title %> (<%= @serie.title %>)</span>
-			</div>
-			<div class="card-action">
-				<a href="#">Favorito</a>
+				<a href="#" class="btn-large btn-floating red lighten-3 right" style="margin: 10px;">
+					<i class="mdi-action-favorite-outline"></i>
+				</a>
 			</div>
 		</div>
 	</div>
