--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,21 +1,36 @@
 <div class="row">
-	
+	<div class="col s12 center-align">
+		<% if user_signed_in? %>
+			<form>
+				<div class="input-field col s12">
+          <input placeholder="Procurar..." id="search" type="text" style="padding: 20px; margin-bottom: 40px; font-size: 40px;">
+        </div>
+			</form>
+		<% else %>
+			<h1>Administre suas séries</h1>
+			<%= link_to user_omniauth_authorize_path(:facebook) do %>
+				<button class="btn-large waves-effect waves-light">
+					Entrar <i class="mdi-content-send right"></i>
+				</button>
+			<% end %>
+		<% end %>
+		<br><br><br>
+	</div>
+</div>
+<div class="row">
 	<% @series.each do |serie| %>
-		<%= link_to serie do %>
-			<div class="col s3">
-				<div class="card medium">
-					<div class="card-image waves-effect waves-block waves-light">
+		<div class="col s3">
+			<div class="card">
+				<div class="card-image">
+					<%= link_to serie do %>
 						<img src="<%= serie.poster %>">
-						<span class="card-title"></span>
-					</div>
-					<div class="card-content">
-						<span class="card-title activator grey-text text-darken-4"><%= serie.title %></span>
-					</div>
-					<div class="card-action">
-						<%= link_to 'Episódios', serie %>
-					</div>
+						<span class="card-title"><%= serie.original_title %></span>
+					<% end %>
+				</div>
+				<div class="card-content">
+					<span class="card-title grey-text text-darken-4"><%= serie.title %></span>
 				</div>
 			</div>
-		<% end %>
+		</div>
 	<% end %>
 </div>
