--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,25 @@
 		<h2 style="margin: 0px; padding: 30px; color: #eceff1;">sjsoidjsid</h2>
 		<nav class="indigo">
 			<div class="nav-wrapper row">
-				<div class="col s4 offset-s4">
+				<div class="col s3 offset-s5">
 					<ul>
 						<li><a href="/">Início</a></li>
 						<li><a href="/series">Séries</a></li>
-						<li><a href="/my">Minhas séries</a></li>
 						<li><a href="/me">Perfil</a></li>
 					</ul>
+				</div>
+				<div class="col s3">
+					<% if user_signed_in? %>
+						<span class="valign">
+							Bem vindo(a), <%= current_user.name %>!
+							
+						</span>
+					<img src="<%= current_user.image %>" class="circle responsive-img" style="width: 40px; position: absolute; top: 10px;">
+					<% else %>
+						<%= link_to user_omniauth_authorize_path(:facebook) do %>
+							<span class="amber-text text-accent-3">Entrar com Facebook</span>
+						<% end %>
+					<% end %>
 				</div>
 			</div>
 		</nav>
