--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
 	<div class="col s12 center-align">
 		<% if user_signed_in? %>
-			<form>
+			<form action="/search" method="GET">
 				<div class="input-field col s12">
-          <input placeholder="Procurar..." id="search" type="text" style="padding: 20px; margin-bottom: 40px; font-size: 40px;">
+          <input placeholder="Procurar..." name="q" id="search" type="text" style="padding: 20px; margin-bottom: 40px; font-size: 40px;">
         </div>
 			</form>
 		<% else %>
