--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,19 +18,40 @@
 	</div>
 </div>
 <div class="row">
-	<% @series.each do |serie| %>
-		<div class="col s3">
-			<div class="card">
-				<div class="card-image">
-					<%= link_to serie do %>
-						<img src="<%= serie.poster %>">
-						<span class="card-title"><%= serie.original_title %></span>
-					<% end %>
+	<% @series_blocks.each_with_index do |serie_block, index| %>
+		<div class="series_block series_<%= index %>">
+			<% serie_block.each do |serie| %>
+				<div class="col s3">
+					<div class="card">
+						<div class="card-image">
+							<%= link_to serie do %>
+							<img src="<%= serie.poster %>">
+							<span class="card-title"><%= serie.original_title %></span>
+							<% end %>
+						</div>
+						<div class="card-content">
+							<span class="card-title grey-text text-darken-4"><%= serie.title %></span>
+						</div>
+					</div>
 				</div>
-				<div class="card-content">
-					<span class="card-title grey-text text-darken-4"><%= serie.title %></span>
-				</div>
-			</div>
+			<% end %>
 		</div>
 	<% end %>
 </div>
+
+<% content_for :js do %>
+<script>
+	$(document).ready(function () {
+		var current = 0;
+		function change_series() {
+			var blocks = $('.series_block');
+			$('.series_block').hide();
+			$('.series_' + current).fadeIn('slow');
+			current++;
+			if (current >= 3) current = 0;
+			setTimeout(change_series, 3000);
+		}
+		change_series();
+	});
+</script>
+<% end %>
