--- a/app/views/series/index.html.erb
+++ b/app/views/series/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Series#index</h1>
-<p>Find me in app/views/series/index.html.erb</p>
+<h3><span>Series</span></h3>
+
+<div class="row">
+  <div class="col s12 center-align">
+    <%= paginate @series %>
+  </div>
+</div>
+
+<div class="row">
+	<% @series.each do |serie| %>
+	<div class="col s3">
+		<div class="card" style="height: 450px;">
+			<div class="card-image">
+				<%= link_to serie do %>
+					<img src="<%= serie.poster %>">
+					<span class="card-title"><%= serie.original_title %></span>
+				<% end %>
+			</div>
+			<div class="card-content">
+				<span class="card-title grey-text text-darken-4"><%= serie.title %></span>
+			</div>
+		</div>
+	</div>
+	<% end %>
+</div>
